<resources>
    <string name="app_name">True Find</string>

    <string name="navitation_drawer_open">Open navigation drawer</string>
    <string name="navitation_drawer_close">Close navigation drawer</string>
    <string name="firstName">First Name*</string>
    <string name="lastName">Last Name*</string>
    <string name="mobNo">Mobile Number*</string>
    <string name="emailID">Email ID*</string>
    <string name="name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="booking_date">Booking Date</string>
    <string name="contact_no">Mobile Number</string>

    <string name="username">User Name</string>
    <string name="login">Login</string>

    <string name="dont_have_account">Don\'t have an account? <b><u>Registration</u></b></string>
    <string name="already_signup">Already created account? <b><u>Login</u></b></string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email Id</string>
    <string name="mobile">Mobile</string>
    <string name="con_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="registration">Registration</string>
    <string name="submit">Submit</string>
    <string name="email_or_mobile">Email or Mobile</string>
    <string name="otp">OTP</string>
    <string name="please_enter_userid">Please Enter User Name</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="oops">Oops</string>


    <string name="pass">Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="search">Type here to search</string>
    <string name="all_cat">All Category</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="mother_name">Mother\'s Name*</string>
    <string name="father_name">Father\'s Name*</string>
    <string name="date">Date*</string>
    <string name="address">Address</string>
    <string name="adhar_no">Adhar Number*</string>
    <string name="mobile_no">Contact Number*</string>
    <string name="registration_fee">Registration Fees*</string>
    <string name="company_name">Company Name</string>
    <string name="job_profile">Job Profile</string>
    <string name="experience">Experience</string>
    <string name="position_apply">Position you are applying for</string>
    <string name="fax">Fax</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_sure">Not/Sure</string>
    <string name="last_comp">Last Company You worked for</string>
    <string name="photo_canditate">Photograph of Candidate*</string>
    <string name="signature_candiated">Signature of Candidate*</string>
    <string name="reference">Reference/Comments/Questions</string>
    <string name="term_condition">Terms &amp; condition</string>
    <string name="pay_submit">Pay &amp; Submit</string>

    <string name="term_condition_line">Dear applicant we are charging very nominal fees for the application of hiring and our motive is not to earn income but to restrict the no of application. Fees paid by the applicant is non refundable. No one can claim refund against any of the amount paid on any grounds. Decision of hiring will be taken after considering the qualifications and personal background of the applicant. Company is not bound to hire the applicant after receiving the application fees. All the hiring process will be performed as per the schedule fix by the company.</string>


    //category name
    <string name="flowers">Flowers</string>
    <string name="home_decor">Home Decor</string>
    <string name="home_imp">Home Improvements</string>
    <string name="hospitals">Hospitals</string>
    <string name="house_keeping">House Keeping</string>
    <string name="industrial_product">Industrial Products</string>
    <string name="insurance">Insurance</string>
    <string name="interior">Interior Designer</string>
    <string name="internet">Internet</string>

    <string name="business_name">Business Name</string>
    <string name="owner_name">Owner Name</string>

    <string name="Rs">\u20B9</string>
    <string name="welcome_message">Hey, Welcome, Login to access management.</string>
    <string name="enter_valid_email_id">Please enter valid email id</string>
    <string name="forgot_password_">Forgot Passwrd</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_pasword">Conform Password</string>
    <string name="password_not_match">Password Not Match</string>
    <string name="welcome_message_registration">Hey, Welcome, Registration to access management</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_want_to_logout">Are you want to logout?</string>
    <string name="login_first">Login First</string>
    <string name="send_enqiry">Send Enquiry</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="choose_post">Choose Post</string>
    <string name="notification">Notification</string>

    <string-array name="stepLabels">
        <item>Personal Details</item>
        <item>Choose Post</item>
        <item>Experience Detail</item>
    </string-array>
</resources>