<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.business.findtrue.custom.TitleTextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:padding="10dp"

        android:textStyle="bold"
        android:drawableTint="@color/white"
        android:textSize="20dp"
        android:gravity="center"
        android:background="@color/purple_500"
        android:textColor="@color/white"
        android:drawablePadding="10dp"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/welcome_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_want_to_logout"
        android:padding="18dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/name"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toRightOf="@+id/cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_back"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/ok"
        app:layout_constraintTop_toBottomOf="@+id/welcome_back"/>

</androidx.constraintlayout.widget.ConstraintLayout>