<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment.ExperienceDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:elevation="5dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/company_name" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editCompanyName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/job_profile">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editJobProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/experience">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editExperience"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/fax">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editFax"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/position_apply" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editApply"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Are You willing to relocate?"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <RadioGroup
                    android:id="@+id/groupRelocate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes"
                        android:layout_weight="1"/>

                    <RadioButton
                        android:id="@+id/radioButtonNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no"
                        android:layout_weight="1"/>
                    <RadioButton
                        android:id="@+id/radioButtonNotSure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/not_sure"
                        android:layout_weight="1"/>
                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/last_comp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editLastCompany"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photo_canditate"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <ImageView
                    android:id="@+id/ivProfileImage"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:src="@drawable/profile_photo"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/signature_candiated"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <ImageView
                    android:id="@+id/ivSignature"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/signature"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/reference"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="Wirite something here">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editSummary"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:gravity="top"/>
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/mCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/term_condition"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <RelativeLayout
                    android:id="@+id/btnRelativePay"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_back">

                    <TextView
                        android:id="@+id/btnSave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@null"
                        android:gravity="center"
                        android:text="@string/pay_submit"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/white" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/btnSave"
                        android:padding="3dp"
                        android:visibility="gone"
                        android:indeterminateTint="@color/grey_300"/>

                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</LinearLayout>