<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.UserLoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp">
        <com.business.findtrue.custom.RegularTextInputLayout
            android:id="@+id/inputLayoutUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:layout_constraintTop_toTopOf="parent">
            <com.business.findtrue.custom.RegularTextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_12sdp"
                tools:text="gaurav@gmail.com"/>

        </com.business.findtrue.custom.RegularTextInputLayout>

        <com.business.findtrue.custom.RegularTextInputLayout
            android:id="@+id/inputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/_5sdp"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutUserName">
            <com.business.findtrue.custom.RegularTextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_gravity="center"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:textSize="@dimen/_12sdp"
                tools:text="gaurav123"/>

        </com.business.findtrue.custom.RegularTextInputLayout>

        <com.business.findtrue.custom.RegularTextView
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="@string/forgot_password"
            app:layout_constraintTop_toBottomOf="@id/inputLayoutPassword"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.business.findtrue.custom.RegularButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_5sdp"
            android:backgroundTint="@color/purple_500"
            app:layout_constraintTop_toBottomOf="@+id/forgetPassword"/>

        <com.business.findtrue.custom.RegularTextView
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/dont_have_account"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@+id/login"/>

        <com.business.findtrue.custom.RegularTextView
            android:id="@+id/tvMayBeLater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="Maybe Later"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup"
            android:layout_gravity="center" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>